multi-cluster-server/monitoring-firewall-rules.txt
[
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "8081"
        ]
      }
    ],
    "creationTimestamp": "2024-11-15T18:51:46.644-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "4851336280305677869",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "allow-monitoring-to-app",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/allow-monitoring-to-app",
    "sourceRanges": [
      "34.102.54.65/32",
      "35.235.92.167/32",
      "35.236.29.100/32"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2024-09-04T19:41:26.219-07:00",
    "description": "Allow ICMP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "3030207380130669753",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-icmp",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/default-allow-icmp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "creationTimestamp": "2024-09-04T19:41:26.210-07:00",
    "description": "Allow internal traffic on the default network",
    "direction": "INGRESS",
    "disabled": false,
    "id": "3760129551598134457",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-internal",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/default-allow-internal",
    "sourceRanges": [
      "10.128.0.0/9"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ]
      }
    ],
    "creationTimestamp": "2024-09-04T19:41:26.216-07:00",
    "description": "Allow RDP from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "854719733611930809",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-rdp",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/default-allow-rdp",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ]
      }
    ],
    "creationTimestamp": "2024-09-04T19:41:26.213-07:00",
    "description": "Allow SSH from anywhere",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2909681921970971833",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "default-allow-ssh",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 65534,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/default-allow-ssh",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp"
      },
      {
        "IPProtocol": "udp"
      },
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "esp"
      },
      {
        "IPProtocol": "ah"
      },
      {
        "IPProtocol": "sctp"
      }
    ],
    "creationTimestamp": "2024-11-03T21:23:26.422-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "934850423075234977",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-echoes-52946284-all",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-echoes-52946284-all",
    "sourceRanges": [
      "10.43.128.0/17"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "creationTimestamp": "2024-11-03T21:23:26.046-08:00",
    "denied": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10255"
        ]
      }
    ],
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "100237040788300961",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-echoes-52946284-exkubelet",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-echoes-52946284-exkubelet",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10255"
        ]
      }
    ],
    "creationTimestamp": "2024-11-03T21:23:26.549-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "6719020134868313249",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-echoes-52946284-inkubelet",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 999,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-echoes-52946284-inkubelet",
    "sourceRanges": [
      "10.43.128.0/17"
    ],
    "sourceTags": [
      "gke-hungry-echoes-52946284-node"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "tcp",
        "ports": [
          "1-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "1-65535"
        ]
      }
    ],
    "creationTimestamp": "2024-11-03T21:23:26.609-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "7984571405851550881",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-echoes-52946284-vms",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-echoes-52946284-vms",
    "sourceRanges": [
      "10.128.0.0/9"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp"
      },
      {
        "IPProtocol": "udp"
      },
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "esp"
      },
      {
        "IPProtocol": "ah"
      },
      {
        "IPProtocol": "sctp"
      }
    ],
    "creationTimestamp": "2024-11-11T10:52:07.577-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "3385897368806223032",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-monitoring-7fa71800-all",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-monitoring-7fa71800-all",
    "sourceRanges": [
      "10.84.0.0/14"
    ],
    "targetTags": [
      "gke-hungry-monitoring-7fa71800-node"
    ]
  },
  {
    "creationTimestamp": "2024-11-11T10:52:07.239-08:00",
    "denied": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10255"
        ]
      }
    ],
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "1505255267198037176",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-monitoring-7fa71800-exkubelet",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-monitoring-7fa71800-exkubelet",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "gke-hungry-monitoring-7fa71800-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10255"
        ]
      }
    ],
    "creationTimestamp": "2024-11-11T10:52:07.730-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "2801027594523241656",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-monitoring-7fa71800-inkubelet",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 999,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-monitoring-7fa71800-inkubelet",
    "sourceRanges": [
      "10.84.0.0/14"
    ],
    "sourceTags": [
      "gke-hungry-monitoring-7fa71800-node"
    ],
    "targetTags": [
      "gke-hungry-monitoring-7fa71800-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "icmp"
      },
      {
        "IPProtocol": "tcp",
        "ports": [
          "1-65535"
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "1-65535"
        ]
      }
    ],
    "creationTimestamp": "2024-11-11T10:52:07.802-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "8494095303301917880",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "gke-hungry-monitoring-7fa71800-vms",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/gke-hungry-monitoring-7fa71800-vms",
    "sourceRanges": [
      "10.128.0.0/9"
    ],
    "targetTags": [
      "gke-hungry-monitoring-7fa71800-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80"
        ]
      },
      {
        "IPProtocol": "tcp",
        "ports": [
          "443"
        ]
      }
    ],
    "creationTimestamp": "2024-11-14T20:19:36.169-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "363849325825717559",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "he-nginx-ingress-allow",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/he-nginx-ingress-allow",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "nginx-ingress"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "10256"
        ]
      }
    ],
    "creationTimestamp": "2024-11-11T14:01:52.196-08:00",
    "description": "{\"kubernetes.io/cluster-id\":\"aa201317fc1f4d73\"}",
    "destinationRanges": [
      "35.247.113.253"
    ],
    "direction": "INGRESS",
    "disabled": false,
    "id": "8434756056615206975",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "k8s-aa201317fc1f4d73-node-http-hc",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/k8s-aa201317fc1f4d73-node-http-hc",
    "sourceRanges": [
      "130.211.0.0/22",
      "35.191.0.0/16",
      "209.85.152.0/22",
      "209.85.204.0/22"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "31953"
        ]
      }
    ],
    "creationTimestamp": "2024-11-13T21:00:18.812-08:00",
    "description": "{\"kubernetes.io/service-name\":\"ingress-nginx/ingress-nginx-controller\", \"kubernetes.io/service-ip\":\"34.168.248.34\"}",
    "destinationRanges": [
      "34.168.248.34"
    ],
    "direction": "INGRESS",
    "disabled": false,
    "id": "3022581111664950541",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "k8s-ad3a6ebb4ed8249cdadb3eb10db2db00-http-hc",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/k8s-ad3a6ebb4ed8249cdadb3eb10db2db00-http-hc",
    "sourceRanges": [
      "130.211.0.0/22",
      "35.191.0.0/16",
      "209.85.152.0/22",
      "209.85.204.0/22"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80",
          "8081"
        ]
      }
    ],
    "creationTimestamp": "2024-11-11T14:01:47.008-08:00",
    "description": "{\"kubernetes.io/service-name\":\"default/hungry-echoes\", \"kubernetes.io/service-ip\":\"35.247.113.253\"}",
    "destinationRanges": [
      "35.247.113.253"
    ],
    "direction": "INGRESS",
    "disabled": false,
    "id": "2005959685527552037",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "k8s-fw-ac5f903c9358e4ff1a4ca7d9cf26a52d",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/k8s-fw-ac5f903c9358e4ff1a4ca7d9cf26a52d",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "80",
          "443"
        ]
      }
    ],
    "creationTimestamp": "2024-11-13T21:00:12.273-08:00",
    "description": "{\"kubernetes.io/service-name\":\"ingress-nginx/ingress-nginx-controller\", \"kubernetes.io/service-ip\":\"34.168.248.34\"}",
    "destinationRanges": [
      "34.168.248.34"
    ],
    "direction": "INGRESS",
    "disabled": false,
    "id": "5299882632972614963",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "k8s-fw-ad3a6ebb4ed8249cdadb3eb10db2db00",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/k8s-fw-ad3a6ebb4ed8249cdadb3eb10db2db00",
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "targetTags": [
      "gke-hungry-echoes-52946284-node"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "8081"
        ]
      }
    ],
    "creationTimestamp": "2024-11-14T22:26:45.826-08:00",
    "description": "",
    "direction": "INGRESS",
    "disabled": false,
    "id": "840938519313209162",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "metrics-ingress-allow",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/metrics-ingress-allow",
    "sourceRanges": [
      "0.0.0.0/0"
    ]
  },
  {
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "8081"
        ]
      }
    ],
    "creationTimestamp": "2024-11-15T18:29:32.684-08:00",
    "description": "",
    "destinationRanges": [
      "34.168.248.34/32"
    ],
    "direction": "EGRESS",
    "disabled": false,
    "id": "293576814684912995",
    "kind": "compute#firewall",
    "logConfig": {
      "enable": false
    },
    "name": "monitoring-egress-to-app",
    "network": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/networks/default",
    "priority": 1000,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/tailscale-tests-and-demos/global/firewalls/monitoring-egress-to-app"
  }
]
