multi-cluster-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hungry-echoes
  labels:
    app: hungry-echoes
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8081"
    prometheus.io/path: /metrics
spec:
  selector:
    app: hungry-echoes
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
    - protocol: TCP
      name: metrics
      port: 8081
      targetPort: 8081
  type: LoadBalancer
